--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
    "http://www.w3.org/TR/html4/strict.dtd">
 <HTML>
    <HEAD>
-      <TITLE>Understanding HTML File Format</TITLE>
+      <TITLE>Colab</TITLE>
    </HEAD>
    <BODY>
+      <h1>Understanding collaboration</h1>
       <P>Hello World!
    </BODY>
 </HTML>
