--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
    </HEAD>
    <BODY>
       <h1>Understanding collaboration</h1>
+      <h2>Second commit</h2>
       <P>Hello World!
    </BODY>
 </HTML>
