--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
    <BODY>
       <h1>Understanding collaboration</h1>
       <h2>Second commit</h2>
+      <h3>Third change</h3>
       <P>Hello World!
    </BODY>
 </HTML>
