--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN"
-   "http://www.w3.org/TR/html4/strict.dtd">
 <HTML>
    <HEAD>
       <TITLE>Colab</TITLE>
+      <Link rel ="stylesheet" href = "main.css">
    </HEAD>
    <BODY>
       <h1>Understanding collaboration</h1>
